# cmiv-CLI

./: .gitignore  Cargo.toml  README.md  index.ts  package-lock.json  package.json  tsconfig.json
src/: cli.js  main.js  main.rs
templates/adonis-ts-web/: adonisrc.ts  package.json
templates/adonis-ts-web/start/: kernel.ts
templates/astro/: package.json
templates/blitz-ts/: .env.test  README.md  package.json
templates/javascript/: docker-compose.yml  package.json
templates/nextjs/: package.json  pnpm-lock.yaml
templates/nextjs13/: package.json
templates/preact-vite-ts/: index.html  package.json  tsconfig.json
templates/preact-vite-ts/src/style/: index.css
templates/redwood-ts/: package.json
templates/redwood-ts/api/: package.json
templates/redwood-ts/web/: package.json
templates/snowpack-preact-js/: Dockerfile  docker-compose.yml  snowpack.config.mjs
templates/snowpack-preact-ts/: Dockerfile  snowpack.config.mjs  tsconfig.json
templates/snowpack-preact-ts/public/: index.html
templates/snowpack-preact-ts/src/scss/: mystyles.scss
templates/solid-vite-ts/: package.json  tsconfig.json
templates/solid-vite-ts/src/: app.tsx
templates/svelte-vite-ts/: package.json
templates/typescript/: package.json  snowpack.config.mjs
templates/vite-preact-ts/: .gitignore  Dockerfile  package.json  vite.config.ts
templates/vite-preact-ts/src/: app.tsx  main.tsx  preact.d.ts
templates/vite-preact-ts/src/components/: nav.tsx  wrapper.tsx
templates/vite-preact-ts/src/layouts/: layout.tsx
templates/vite-preact-ts/src/pages/: Home.tsx  _404.tsx
templates/vite-preact-ts/src/style/: index.css
templates/wmr-ts/: Dockerfile  docker-compose.yml  package-lock.json  package.json
templates/wmr-ts/public/: app.tsx  index.tsx
templates/wmr-ts/public/components/: nav.tsx
templates/wmr-ts/public/pages/: _404.tsx  home.tsx
templates/wmr-ts/public/styles/: styles.css
templates/wmr/public/: index.html
templates/wmr/public/components/: footer.tsx  wrapper.tsx
templates/wmr/public/layouts/: layout.tsx
templates/wmr/public/pages/: about.tsx
