[package]
name = "cmiv-cli"
version = "0.1.9"
edition = "2021"
repository = "https://github.com/CM-IV/cmiv-CLI"

[dependencies]
cliclack = "0.2.5"
ctrlc = "3.4.4"
fs_extra = "1.3.0"
include_dir = "0.7.3"
owo-colors = "4.0.0"
temp-dir = "0.1.13"

# optimize for size
[profile.release]
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1

# Config for 'cargo dist'
[workspace.metadata.dist]
ci = ["github"]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.0"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
