[package]
name = "cmiv-cli"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/CM-IV/cmiv-CLI"

[dependencies]
velvetio = { git = "https://github.com/CM-IV/velvetio.git", rev = "211ea6ab0cc8561d3ea94b2c5292b784f909511f" }
include_dir = "0.7.4"
owo-colors = "4.2.2"
temp-dir = "0.1.16"
fs-more = "0.8.1"

# optimize for size
[profile.release]
strip = true
lto = "fat"
opt-level = "s"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
strip = true
lto = "fat"
opt-level = "s"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1

# Config for 'dist'
[workspace.metadata.dist]
# CI backends to support
ci = "github"
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.2"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
